# MyOwnGameBot

./: main.py  pyproject.toml  redis_client.py  test_all.py  test_bot.py  test_sql.py  utils.py
bot_utils/: bot_routers.py  handlers.py  keyboards.py
data_base/: db.py  init_models.py  manager.py  models.py
data_files/: category_data.csv  question_data.csv
