[tool.poetry]
name = "news-bot"
version = "0.1.0"
description = ""
authors = ["kremniland <kremnilandk@gmail.com>"]
readme = "README.md"
packages = [{include = "news_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.5.post1"}
asyncpg = "^0.27.0"
aiogram = "^2.25.1"
redis = "^4.5.1"
psycopg2 = "^2.9.5"
faker = "^17.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
